# pixels

./: hie.yaml  pixels.cabal  pixels.cabal.previous
executable/pixels/: Main.hs
